--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+/*@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");*/
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 /* Main text is monserrat*/
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif; /*"Montserrat", sans-serif;*/
   font-weight: 300;
   line-height: 1.3;
   color: #444;
@@ -12,8 +13,12 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Playfair Display", serif;
-  color: #000;
+  font-family: "Roboto", sans-serif; /*"Playfair Display", serif;*/
+  color: #274b9f; /*#000;*/
+}
+
+[data-id="main"] h2 {
+  color: #a8a7a7;
 }
 
 /* When in PDF export mode make sure superscripts are nice and small and italic */
@@ -36,10 +41,10 @@ sup {
 /* Customize some of the sizing variables */
 :root {
   --sidebar-width: 12rem; /* Shrink sidebar width  */
-  --sidebar-background-color: #f7fbff; /* Make sidebar blue */
+  --sidebar-background-color: #f2f2f1; /* #f7fbff; */ /* Make sidebar blue */
   --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
   --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
-  --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
+  --decorator-border: 2px solid #9cbaff /* #bdd7e7; */ /* Make timeline a blue as well*/
 }
 
 .details .place {
@@ -48,6 +53,11 @@ sup {
 
 .main-block:not(.concise) .details div {
   padding-top: 0.005rem;
+}
+
+/* Change color of icons */
+.fa-map-marker-alt {
+  color: #274b9f;
 }
 
 /* Laptop icon isn't centered by default which is lame */
@@ -116,8 +126,8 @@ sup {
 
 /* Add styles for little cards  */
 .info-card{
-  width: 220px;    
-  float: left;    
+  width: 220px;
+  float: left;
   padding: 0.5rem;
   margin: 0.5rem;
   box-shadow: 1px 1px 4px black;
