--- a/dd_cv.css
+++ b/dd_cv.css
@@ -53,6 +53,7 @@ sup {
   --pagedjs-margin-right: 0.2in;
   --pagedjs-margin-left: 0.3in;
   --pagedjs-margin-top: 0.4in;
+  --pagedjs-margin-bottom: 0.5in;
 }
 
 /* Customize some of the sizing variables */
