put colors in css variables, use here package for finding files

--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,5 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
+* {
+  /* Override default margins for sidebar*/
+  --pagedjs-margin-right: 0.2in;
+  --pagedjs-margin-left: 0.3in;
+  --pagedjs-margin-top: 0.4in;
+  --pagedjs-margin-bottom: 0.5in;
+}
+
+/* Customize some of the sizing variables */
+:root {
+  --sidebar-width: 12rem; /* Shrink sidebar width  */
+  --sidebar-background-color: #f2f2f1; /* Make sidebar grey */
+  --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
+  --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
+  --decorator-border: 2px solid #e0e0e0; /* Make timeline a grey as well*/
+  /* define colors */
+  --main-color-headers: #274b9f;
+  --main-color-timeline-headers: #a8a7a7;
+  --main-color-skillbar-background: #d9d9d9;
+}
+
 /* Main text is monserrat*/
 body {
   font-family: "Roboto", sans-serif; /*"Montserrat", sans-serif;*/
@@ -13,7 +34,7 @@ h1,
 h2,
 h3 {
   font-family: "Roboto", sans-serif; /*"Playfair Display", serif;*/
-  color: #274b9f; /*#000;*/
+  color: var(--main-color-headers);
 }
 
 /* reduce padding of main section*/
@@ -22,20 +43,13 @@ h3 {
 }
 /* header in main section to color grey */
 [data-id="main"] h2 {
-  color: #a8a7a7;
+  color: var(--main-color-timeline-headers);
 }
 /* adjust title section within main section to right align with timeline text*/
 /* right and left padding to sun up to zero to align with main section */
 [data-id="title"] {
   margin: 0 0.5in 0.0 -0.5in;
 }
-
-/*
-.main-block {
-  margin-top: 0;
-  margin-left: -0.1in;
-}
-*/
 
 /* When in PDF export mode make sure superscripts are nice and small and italic */
 sup {
@@ -48,23 +62,6 @@ sup {
   break-inside: avoid;
 }
 
-* {
-  /* Override default right margin for sidebar*/
-  --pagedjs-margin-right: 0.2in;
-  --pagedjs-margin-left: 0.3in;
-  --pagedjs-margin-top: 0.4in;
-  --pagedjs-margin-bottom: 0.5in;
-}
-
-/* Customize some of the sizing variables */
-:root {
-  --sidebar-width: 12rem; /* Shrink sidebar width  */
-  --sidebar-background-color: #f2f2f1; /* Make sidebar grey */
-  --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
-  --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
-  --decorator-border: 2px solid #e0e0e0 /* Make timeline a grey as well*/
-}
-
 .details .place {
   margin-top: 0.25rem;
 }
@@ -73,9 +70,15 @@ sup {
   padding-top: 0.005rem;
 }
 
+.formerly {
+  font-size: 10px;
+  color: var(--main-color-timeline-headers);
+  margin-top: -5px;
+}
+
 /* Change color of icons */
 .fa-map-marker-alt {
-  color: #274b9f;
+  color: var(--main-color-headers);
 }
 
 /* Laptop icon isn't centered by default which is lame */
@@ -122,7 +125,7 @@ sup {
 
 /* Make little circle outline be a light blue */
 .decorator::after {
-  background-color: #08306b;
+  background-color: var(--main-color-headers);
 }
 
 /* Remove the fake bullets from lists */
@@ -166,7 +169,7 @@ sup {
   margin-top: 5px;
 }
 .skill_table tr td {
-  border-right: 2px solid #d9d9d9;
+  border-right: 2px solid var(--main-color-skillbar-background);
 }
 .skill_table tr td:last-child {
   border: none;
