--- a/dd_cv.css
+++ b/dd_cv.css
@@ -10,23 +10,29 @@
 
 /* Customize some of the sizing variables */
 :root {
+  --page-width: 210mm;
+
   --sidebar-width: 12rem; /* Shrink sidebar width  */
   --sidebar-background-color: #f2f2f1; /* Make sidebar grey */
   --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
   --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
   --decorator-border: 2px solid #e0e0e0; /* Make timeline a grey as well*/
+
   /* define colors */
   --main-color-headers: #274b9f;
   --main-color-timeline-headers: #a8a7a7;
   --main-color-skillbar-background: #d9d9d9;
 }
 
-/* Main text is monserrat*/
 body {
   font-family: "Roboto", sans-serif; /*"Montserrat", sans-serif;*/
   font-weight: 300;
   line-height: 1.3;
   color: #444;
+}
+
+@page {
+  size: a4 portrait;
 }
 
 /* Give headers playfair font */
