--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 
 * {
   /* Override default margins for sidebar*/
   --pagedjs-margin-right: 0.25in;
   --pagedjs-margin-left: 0.3in;
   --pagedjs-margin-top: 0.3in;
-  --pagedjs-margin-bottom: 0.3in;
+  --pagedjs-margin-bottom: 0.2in;
 }
 
 /* Customize some of the sizing variables */
@@ -24,6 +25,12 @@
   --main-color-headers: #274b9f;
   --main-color-timeline-headers: #a8a7a7;
   --main-color-skillbar-background: #d9d9d9;
+
+  /* space at the top of blocks in main section*/
+  --row-blocks-padding-top: 0.2rem;
+
+  /* adjust date column in timeline */
+  --date-block-width: 0.55in;
 }
 
 body {
@@ -39,10 +46,14 @@ body {
 
 /* Give headers playfair font */
 h1,
-h2,
-h3 {
+h2 {
   font-family: "Roboto", sans-serif; /*"Playfair Display", serif;*/
   color: var(--main-color-headers);
+}
+h3 {
+  font-family: "Roboto", sans-serif; /*"Playfair Display", serif;*/
+  font-weight: 900;
+  color: black;
 }
 
 /* reduce padding of main section*/
@@ -63,6 +74,10 @@ h3 {
 sup {
   font-size: 0.45rem;
   font-style: italic;
+}
+
+.main-block{
+  margin-top: 0.2in;
 }
 
 /* Avoid the breaking within a section */
@@ -100,13 +115,13 @@ sup {
 }
 
 /* Dont put the little fake list point in front of links */
-.aside li::before {
+/*.aside li::before {
   display: none;
-}
+}*/
 
 /* Move closer to start and up towards header */
 .aside ul {
-  padding-left: 1rem;
+  padding-left: 0.5rem;
 }
 
 /* reduce distnce between sections in side pane */
@@ -123,7 +138,7 @@ sup {
 /* Make sure elements in asside are centered and have a nice small text */
 .aside {
   width: calc(var(--sidebar-width) + 9px);
-  height: 100%;
+  height: 102%; /* scrappy way of moving disclaimer further down*/
   padding-top: 0;
   padding-bottom: 0;
   line-height: 1.2;
