--- a/dd_cv.css
+++ b/dd_cv.css
@@ -13,7 +13,7 @@
 :root {
   --page-width: 210mm;
   --margin-left: 0.25in;
-  --margin-right: 0.25in;
+  --margin-right: 0.32in;
 
   --sidebar-width: 12rem; /* Shrink sidebar width  */
   --sidebar-background-color: #f2f2f1; /* Make sidebar grey */
@@ -31,12 +31,15 @@
 
   /* adjust date column in timeline */
   --date-block-width: 0.55in;
+
+  /* adding var vor line height*/
+  --line-height: 1.15;
 }
 
 body {
   font-family: "Roboto", sans-serif; /*"Montserrat", sans-serif;*/
   font-weight: 300;
-  line-height: 1.3;
+  line-height: var(--line-height);
   color: #444;
 }
 
@@ -126,7 +129,7 @@ sup {
 
 /* reduce distnce between sections in side pane */
 .aside .level2 {
-  margin-top: 0.3in;
+  margin-top: 0.2in;
 }
 
 .aside li::before {
@@ -141,7 +144,7 @@ sup {
   height: 102%; /* scrappy way of moving disclaimer further down*/
   padding-top: 0;
   padding-bottom: 0;
-  line-height: 1.2;
+  line-height: var(--line-height);
   font-size: 0.75rem;
   margin-top: -0.1in;
 }
